plugins {
    id 'org.springframework.boot' version '2.7.0-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id "org.jetbrains.kotlin.jvm" version "1.7.0"
    id "org.jetbrains.kotlin.kapt" version "1.7.0"
    id "com.gorylenko.gradle-git-properties" version "2.4.1" // for telling the frontend details about the backend instance
}

gitProperties {
    failOnNoGitDirectory = false
}

group = 'io.github.transfusion'
sourceCompatibility = '11'

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'

    // https://mvnrepository.com/artifact/com.github.vladimir-bukhtoyarov/bucket4j-core
    implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.6.0'
    implementation 'com.github.vladimir-bukhtoyarov:bucket4j-redis:7.6.0'

    // for email sending
    implementation("org.springframework.boot:spring-boot-starter-mail")
    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
    implementation platform('software.amazon.awssdk:bom:2.17.247')
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
    implementation 'software.amazon.awssdk:s3'
    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3'
    implementation 'org.mapstruct:mapstruct:1.5.2.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
    kapt 'org.mapstruct:mapstruct-processor:1.5.2.Final'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
    implementation 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'

    implementation 'org.jobrunr:jobrunr-spring-boot-starter:5.3.0'
    implementation 'org.apache.commons:commons-pool2:2.11.1'

    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.mockito:mockito-core:4.6.1'

    // https://mvnrepository.com/artifact/commons-net/commons-net
    implementation group: 'commons-net', name: 'commons-net', version: '3.9.0'
}

bootJar {
    archiveFileName = 'deployapp-backend.jar'
}

bootRun {
    if ( project.hasProperty('jvmArgs') ) {
		jvmArgs project.jvmArgs.split('\\s+')
	}
}

test {
    useJUnitPlatform()
}
